@fix
renamed main.css to app.css. Added schedules page, fixed layout issue and changed some properties on navbar

--- a/src/assets/styles/navbar.css
+++ b/src/assets/styles/navbar.css
@@ -1,8 +1,8 @@
 .navbar {
-    position: fixed;
     top: 0;
     left: 0;
-    width: 300px;
+    min-width: 25%;
+    max-width: 30%;
     height: 100vh; /* 100% of the viewport height */
     background-color: #1E1E1E; /* Customize as needed */
     color: white; /* Customize text color */
